--- a/styles/pages/_findJob.scss
+++ b/styles/pages/_findJob.scss
@@ -23,10 +23,9 @@
     width: 10%;
     // flex-wrap: wrap;
     justify-content: center;
-    // align-items: center;
-    gap: 1rem;
+    align-items: center;
+    gap: 0.75rem;
 
-    padding: 0 2.5rem;
     p {
       font: bold 1rem Nunito;
     }
@@ -41,15 +40,10 @@
     }
   }
   &__checkboxes {
-    margin-top: 0.75rem;
+    margin-top: 0.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
-    // display: hidden;
-    // transition: height 0.2s ease-in-out;
-    &--active {
-      // display: hidden;
-    }
+    gap: 0.5rem;
   }
   &__result {
     display: flex;
