--- a/styles/pages/_findJob.scss
+++ b/styles/pages/_findJob.scss
@@ -23,8 +23,9 @@
     width: 10%;
     // flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 0.75rem;
+    gap: 1rem;
+
+    padding: 0 2rem;
 
     p {
       font: bold 1rem Nunito;
