--- a/styles/pages/_jobDetail.scss
+++ b/styles/pages/_jobDetail.scss
@@ -1,55 +1,55 @@
-@import "../base/color";
+// @import "../base/color";
 
-.job-details {
-  padding: 4rem 8rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  &__header {
-    display: flex;
-    justify-content: space-between;
-    &-left {
-      display: flex;
-      gap: 1.5em;
-      img {
-        height: 8rem;
-        width: 8rem;
+// .job-details {
+//   padding: 4rem 8rem;
+//   display: flex;
+//   flex-direction: column;
+//   gap: 1rem;
+//   &__header {
+//     display: flex;
+//     justify-content: space-between;
+//     &-left {
+//       display: flex;
+//       gap: 1.5em;
+//       img {
+//         height: 8rem;
+//         width: 8rem;
 
-        object-fit: cover;
-        border: 1px solid #cfcfcf;
-        border-radius: 1rem;
-      }
+//         object-fit: cover;
+//         border: 1px solid #cfcfcf;
+//         border-radius: 1rem;
+//       }
 
-      p:nth-child(1) {
-        font: bold 1.5rem Nunito;
-      }
-    }
-    &-right {
-      width: 12rem;
-      button:nth-child(1) {
-        width: inherit;
+//       p:nth-child(1) {
+//         font: bold 1.5rem Nunito;
+//       }
+//     }
+//     &-right {
+//       width: 12rem;
+//       button:nth-child(1) {
+//         width: inherit;
 
-        color: white;
-        background: $color-primary;
-        font-size: 1.25rem;
-        padding: 0.75rem 4rem;
-      }
-      button:nth-child(2) {
-        margin-top: 1rem;
-        width: inherit;
-        border: 1px solid $color-primary;
-        font-size: 1.25rem;
+//         color: white;
+//         background: $color-primary;
+//         font-size: 1.25rem;
+//         padding: 0.75rem 4rem;
+//       }
+//       button:nth-child(2) {
+//         margin-top: 1rem;
+//         width: inherit;
+//         border: 1px solid $color-primary;
+//         font-size: 1.25rem;
 
-        padding: 0.75rem 4rem;
-      }
-    }
-  }
-  &__title {
-    font: normal 1.5rem Nunito;
-  }
-  &__section {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-}
+//         padding: 0.75rem 4rem;
+//       }
+//     }
+//   }
+//   &__title {
+//     font: normal 1.5rem Nunito;
+//   }
+//   &__section {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 0.5rem;
+//   }
+// }
