--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,4 +12,4 @@
 @import "components/button", "./modules/navbar", "./components/avatar",
   "./components/common", "./components/Toggle/toggles", "./components/selection",
   "./components/jobCard";
-@import "./pages/404", "./pages/findJob", "./pages/jobDetail";
+@import "./pages/404";
