Add dropfile components + Update job detail

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,5 +11,5 @@
 
 @import "components/button", "./modules/navbar", "./components/avatar",
   "./components/common", "./components/Toggle/toggles", "./components/selection",
-  "./components/jobCard";
+  "./components/jobCard", "./components/dropFile";
 @import "./pages/404";
