--- a/styles/components/_dropFile.scss
+++ b/styles/components/_dropFile.scss
@@ -1,3 +1,13 @@
+:root {
+  --body-bg: #f5f8ff;
+  --box-bg: #fff;
+  --input-bg: #f5f8ff;
+  --txt-color: #2f2d2f;
+  --txt-second-color: #ccc;
+  --border-color: #4267b2;
+  --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
 .drop-file-input {
   position: relative;
   width: 400px;
