--- a/styles/components/_common.scss
+++ b/styles/components/_common.scss
@@ -20,3 +20,7 @@
 .avatar {
   @apply rounded-full border border-gray-200 object-cover;
 }
+.alert-shadow {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
