--- a/styles/components/_jobCard.scss
+++ b/styles/components/_jobCard.scss
@@ -71,9 +71,9 @@
   border-radius: 0.5em;
 
   transition: all 0.2s ease-in;
-  &:hover {
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
+  // &:hover {
+  //   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  // }
   &__header {
     position: relative;
 
