Update loading + scrollbar styles

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,5 +13,5 @@
   "./components/common", "./components/Toggle/toggles", "./components/selection",
   "./components/jobCard", "./components/dropFile",
   "./components/loading-transition";
-@import "./modules/tab";
+@import "./modules/tab", "./modules/scrollbar";
 @import "./pages/404", "./pages/job";
