--- a/styles/components/_common.scss
+++ b/styles/components/_common.scss
@@ -1,3 +1,8 @@
+@import 'antd/dist/antd.css';
+
+.p {
+  margin-bottom: 0px;
+}
 .divider {
   margin: 0.5rem;
 
@@ -30,3 +35,4 @@
   placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 
   focus:ring-purple-600 focus:border-transparent;
 }
+
