Add title recruiter route

--- a/styles/modules/_navbar.scss
+++ b/styles/modules/_navbar.scss
@@ -28,6 +28,10 @@
     &:hover {
       color: $color-primary;
     }
+
+    &--active {
+      color: $color-primary;
+    }
   }
   &__auth {
     display: flex;
