--- a/styles/modules/_navbar.scss
+++ b/styles/modules/_navbar.scss
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: space-between;
 
-  padding: 1rem 4rem;
+  // padding: 1rem 4rem;
 
   &__navigation {
     display: flex;
